[gd_scene load_steps=4 format=2]

[ext_resource path="res://Art/rectangle.png" type="Texture" id=1]
[ext_resource path="res://RectTelegraph.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 391.445, 92.7875 )

[node name="RectTelegraph" type="Node2D"]
script = ExtResource( 2 )

[node name="TextureProgress" type="TextureProgress" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -100.0
margin_right = 800.0
margin_bottom = 100.0
value = 50.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
tint_under = Color( 0.596078, 0.0588235, 0.0588235, 0.258824 )
tint_progress = Color( 0.854902, 0.0196078, 0.0196078, 0.47451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 400, 0 )
shape = SubResource( 1 )

[node name="End" type="Node2D" parent="."]
position = Vector2( 799.259, 0 )
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
